cabal-version:   3.0
name:            opendht-hs
version:         0.1.0.0
synopsis:        Haskell bindings for OpenDHT
license:         GPL-3.0-or-later
license-file:    LICENSE
author:          Simon Désaulniers
maintainer:      sim.desaulniers@gmail.com
category:        Network
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall -Wcompat -Wincomplete-record-updates
                 -Wincomplete-uni-patterns -Wredundant-constraints
common threading
    ghc-options: -threaded

library
    import:             warnings,
                        threading
    exposed-modules:    OpenDHT
                        OpenDHT.DhtRunner
                        OpenDHT.Types
                        OpenDHT.InfoHash
                        OpenDHT.Value
                        OpenDHT.PublicKey
                        OpenDHT.PrivateKey
                        OpenDHT.Certificate
    other-modules:      OpenDHT.Internal.DhtRunner
                        OpenDHT.Internal.InfoHash
                        OpenDHT.Internal.Blob
                        OpenDHT.Internal.Value
                        OpenDHT.Internal.PublicKey
                        OpenDHT.Internal.PrivateKey
                        OpenDHT.Internal.Crypto
                        OpenDHT.Internal.Certificate
    build-depends:      base       ^>= 4.17.2.1,
                        bytestring ^>= 0.11.5,
                        transformers,
                        containers,
                        mtl,
                        lens
    build-tool-depends: c2hs:c2hs
    pkgconfig-depends:  opendht-c
    hs-source-dirs:     src
    default-language:   Haskell2010

    c-sources:          src/OpenDHT/Internal/DhtRunner.c
                        src/OpenDHT/Blob.c
                        src/OpenDHT/Internal/Value.c
                        src/OpenDHT/Internal/Certificate.c
                        src/OpenDHT/Internal/PublicKey.c
    include-dirs:       src/OpenDHT/Internal

--  vim: set sts=4 ts=4 sw=4 tw=120 et :

