cabal-version:   3.0
name:            opendht-hs
version:         0.1.0.0
synopsis:        Haskell bindings for OpenDHT
description:     Haskell bindings for [OpenDHT](https://github.com/savoirfairelinux/opendht) (based
                 on opendht-c, the C bindings for OpenDHT) exposing only pure Haskell data types.

                 This library defines a monad taking care of all pointers used to interact with
                 opendht-c.
license:         GPL-3.0-or-later
license-file:    LICENSE
author:          Simon Désaulniers
maintainer:      sim.desaulniers@gmail.com
category:        Network
build-type:      Simple
extra-doc-files: CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/sim590/opendht-hs

common warnings
    ghc-options: -Wall -Wcompat -Wincomplete-record-updates
                 -Wincomplete-uni-patterns -Wredundant-constraints
common threading
    ghc-options: -threaded

library
    import:             warnings,
                        threading
    exposed-modules:    OpenDHT
                        OpenDHT.DhtRunner
                        OpenDHT.Types
                        OpenDHT.InfoHash
                        OpenDHT.Value
                        OpenDHT.PublicKey
                        OpenDHT.PrivateKey
                        OpenDHT.Certificate
    other-modules:      OpenDHT.Internal.DhtRunner
                        OpenDHT.Internal.InfoHash
                        OpenDHT.Internal.Blob
                        OpenDHT.Internal.Value
                        OpenDHT.Internal.PublicKey
                        OpenDHT.Internal.PrivateKey
                        OpenDHT.Internal.Crypto
                        OpenDHT.Internal.Certificate
    build-depends:      base          ^>= 4.17.2.1,
                        bytestring    ^>= 0.11.5,
                        containers    >= 0.6.7 && < 0.7,
                        data-default  >= 0.8.0 && < 0.9,
                        lens          >= 5.3.3 && < 5.4,
                        transformers  >= 0.5.6 && < 0.6,
                        stm           >= 2.5.1 && < 2.6,
                        mtl           >= 2.2.2 && < 2.3,
                        random        >= 1.2.1 && < 1.3,
    build-tool-depends: c2hs:c2hs
    pkgconfig-depends:  opendht-c
    hs-source-dirs:     src
    default-language:   Haskell2010

    c-sources:          src/OpenDHT/Internal/DhtRunner.c
                        src/OpenDHT/Blob.c
                        src/OpenDHT/Internal/Value.c
                        src/OpenDHT/Internal/Certificate.c
                        src/OpenDHT/Internal/PublicKey.c
    include-dirs:       src/OpenDHT/Internal

--  vim: set sts=4 ts=4 sw=4 tw=120 et :

